# microservice-integration-test

./: README.md  deployment.yaml  docker-compose.yml
go-app/: main.go  rundocker.sh
rust-app/: Cargo.toml  Dockerfile
rust-app/src/: main.rs
rust-sql-db/: .env  Cargo.toml  Dockerfile  Dockerfile copy  run.sh
rust-sql-db/src/: lib.rs  models.rs
