[package]
name = "rust-app"
version = "0.1.0"
authors = ["OscarClemente <oscar.clemente@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
actix-web = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
