[package]
name = "rust-sql-db"
version = "0.1.0"
authors = ["OscarClemente <oscar.clemente@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"